--- a/waimai/waimai.csproj
+++ b/waimai/waimai.csproj
@@ -111,6 +111,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\addg.png" />
     <Content Include="Assets\defaultPic.jpg" />
     <Content Include="Assets\Logo.scale-240.png" />
     <Content Include="Assets\SmallLogo.scale-240.png" />
